= Unreleased =
# Fixed
- fixed address geocode hardcode
- fixed a map button show by settings value
- fixed a carrier selection in Omniva block on Order edit page, when carrier is disabled
- fixed the error on Checkout page that occurs when the country code is lowercase

= 2.0.3 =
# Fixed
- fixed label generation ajax error in order edit page
- in Omniva Orders page order link moved from customer to id
- in Omniva Orders page renamed manifest generation button, moved to right side and added additional button above table
- in Omniva Orders page fixed JS file link, when website is in subfolder
- in Omniva Orders page changed Orders list order by ID only

# Improved
- added error message in order edit page, when label generation ajax got error
- added a option to disable return code sending to customer

# Updated
- API library to 1.0.7

= 2.0.2 =
# Fixed
- fixed reference number generation, when order ID is less then 10

# Updated
- API library to 1.0.6

= 2.0.1 =
# Updated
- API library to 1.0.5
- Added new logo

# Improved
- Added save of initial order data

= 2.0.0 =
 - Reworked module to use API library for better maintenance.
 - Removed Cart override and cart table alterations.
 - Remade ajax controller to admin type.
 - Various code clean-ups and optimizations.
 - Compatibility along 1.6 - 1.7 versions.

# Fixed
- Default language code select in Checkout page
- Terminal selection load in OnePage checout page

= 1.1.8 =

# Fixed
- Broken Omniva information block in Order page in Prestshop 1.7.7+

= 1.1.7 =

# Improved
- added a ability to change labels printing type
- bank account number has been made optional

# Fixed
- empty PDF file when printing single label and error occurs
- remove always true from admin order

= 1.1.6 =

# Improved
- created changelog file
- added a ability to change manifest language

# Fixed
- fixed terminals list when address is not entered
- fixed notice message in order page
- fixed TCPDF error when PDF is generating

= 1.1.5 =
